--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,9 @@
                 "/Zi",
                 "/EHsc",
                 "/nologo",
-                "/Fe${fileDirname}\\${fileBasenameNoExtension}.exe",
+                "/Fe${fileDirname}\\bin\\${fileBasenameNoExtension}.exe",
+                "/Fo${fileDirname}\\bin\\${fileBasenameNoExtension}.obj",
+                "/Fd${fileDirname}\\..\\bin\\${fileBasenameNoExtension}.pdb",
                 "${file}",
                 //  to link the resulting object file with user32.lib and gdi32.lib
                 "user32.lib", "gdi32.lib"
